--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.3.0
   palette_generator: ^0.3.3
+  get: ^4.7.2
 
 dev_dependencies:
   flutter_test:
