--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.3.0
-  palette_generator: ^0.3.3
+  palette_generator: ^0.3.3+7
   get: ^4.7.2
 
 dev_dependencies:
